ko/poc-setup/05-network-policy/netpol-deny-all-poc-network-policy-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: poc-network-policy-2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
